# fastapi_portfolio

./: .env.example  .gitignore  .vercelignore  REFACTORING_NOTES.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quote.html  requirements-vercel.txt  requirements.txt  tailwind.config.js  test_logo_click.js  vercel.json
api/: index.py
src/: main.py
src/api/: blog.py  portfolio.py
src/api/v1/: content.py  health.py
src/config/: settings.py
src/config/environments/: __init__.py  base.py  production.py
src/models/: schemas.py
src/portfolio/: __init__.py  main.py
src/portfolio/api/: blog.py  portfolio.py  routes.py
src/portfolio/api/v1/: content.py
src/portfolio/config/environments/: development.py  testing.py
src/portfolio/models/: blog.py  portfolio.py
src/portfolio/services/: blog_service.py  content_service.py  portfolio_service.py
src/portfolio/templates/: base.html  blog.html  index.html
src/portfolio/tests/: conftest.py  test_portfolio.py  test_responsive.py
src/portfolio/utils/: formatters.py  validators.py
src/services/: blog_service.py  portfolio_service.py
src/static/css/: README.md  input.css  main-modular.css
src/templates/: base.html  index.html
src/templates/components/: about.html  blog-section.html  footer.html  hero.html  inspiring-quote.html  navbar.html  projects.html
src/templates/macros/: forms.html
src/tests/: conftest.py  test_blog.py
src/utils/: formatters.py  helpers.py  validators.py
templates/: blog.html
templates/components/: navbar.html
(+56 files in other folders)
